# try

./: Makefile.am
source/frontend/impl/: .manifold_simiris.cc.swj  .manifold_simiris.cc.swk  .manifold_simiris.cc.swl  .manifold_simiris.cc.swm  .manifold_simiris.cc.swn  .manifold_simiris.cc.swo  .mesh.cc.swp  manifold_simiris.cc  manifold_simiris.cc.old  manifold_simiris.cc~  manifold_simiris_merge.cc~  mesh.cc  topology.h  topology.h~  visual.cc
source/kernel/: simulator.cc  simulator.h
source/mcpat/: mcpat.mk  mcpatXeonCore.mk
source/memctrl/: .Makefile.am.swp  Makefile  Makefile.in
source/orion/: .Makefile.am.swp  .config.h.swp  .configure.ac.swp  .orion_router_power.cpp.swp  Makefile  Makefile.in  Makefile_new  SIM_parameter.h  SIM_router.h  SIM_router_power.cpp  SIM_util.cpp  SIM_util.h  config.h  log_make
source/orion/.deps/: libOrion_a-SIM_ALU.Po  libOrion_a-SIM_arbiter.Po  libOrion_a-SIM_array_m.Po  libOrion_a-SIM_crossbar.Po  libOrion_a-SIM_link.Po  libOrion_a-SIM_misc.Po  libOrion_a-SIM_static.Po  libOrion_a-orion_router_area.Po  libOrion_a-orion_router_power.Po
source/orion/autom4te.cache/: requests  traces.0  traces.2
source/orion3/: .SIM_reg.c.swp  CLKCTRL.c  INBUF.c  Makefile  Makefile.am  Makefile.in  OUTBUF.c  SIM_crossbar.c  SIM_reg.c  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac
source/orion3/.deps/: CLKCTRL.Po  INBUF.Po  NONPR.Po  OUTBUF.Po  SIM_ALU.Po  SIM_arbiter.Po  SIM_array_l.Po  SIM_array_m.Po  SIM_cam.Po  SIM_clock.Po  SIM_crossbar.Po  SIM_link.Po  SIM_misc.Po  SIM_permu.Po  SIM_router.Po  SIM_router_area.Po  SIM_router_power.Po  SIM_static.Po  SIM_time.Po  SIM_util.Po  SWVC.Po  XBAR.Po  orion_router.Po  router.Po  router_area.Po  router_power.Po  test.Po  test_permu.Tpo
source/orion3/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
source/orion_config/: constants.h  default.h  extern.h
source/orion_macsim/: .Makefile.swo  .Makefile.swp  Makefile  Makefile.am  Makefile.in  SIM_arbiter.c  SIM_array_l.c  SIM_crossbar.c  SIM_port.h  SIM_router.c  SIM_router.h  SIM_router_power.c  SIM_util.h  config.h.in  config.status  configure.ac  extern.h.old  orion_link  orion_router_area  orion_router_power  orion_router_power.c
source/orion_macsim/autom4te.cache/: output.1
source/orion_nirgam_simIris/: Makefile.am  Makefile.old  SIM_port.h  SIM_router.cpp  SIM_technology_v1.h  SIM_technology_v2.h  config.status  configure  log_make  orion_router_power.cpp  sh_sed_sub.sh
source/orion_nirgam_simIris/.deps/: libOrion_a-SIM_array_l.Po  libOrion_a-SIM_cam.Po  libOrion_a-SIM_clock.Po  libOrion_a-SIM_permu.Po  libOrion_a-SIM_router.Po  libOrion_a-SIM_router_area.Po  libOrion_a-SIM_router_power.Po  libOrion_a-SIM_time.Po  libOrion_a-SIM_util.Po
source/orion_nirgam_simIris/autom4te.cache/: output.0  requests  traces.1
source/simIris/: .Makefile.am.swn  .Makefile.am.swo  .Makefile.am.swp  .Makefile.swl  .Makefile.swm  .Makefile.swn  .Makefile.swo  .Makefile.swp  Makefile  Makefile.am  Makefile.am~  Makefile.in  Makefile~  config.h  config.status  configure
source/simIris/.deps/: clock.Po  component.Po  customPktGenVn.Po  flit.Po  genericArbiter.Po  genericBuffer.Po  genericCrossbar.Po  genericData.Po  genericFlatMc.Po  genericInterfaceNB.Po  genericInterfaceNBVn.Po  genericInterfaceNBVs.Po  genericInterfaceNBb.Po  genericInterfaceNBm.Po  genericInterfaceNBpr.Po  genericLink.Po  genericPktGen.Po  genericPktGenVn.Po  genericRC.Po  genericRouter4Stg.Po  genericRouterPhy.Po  genericSink.Po  genericVcAllocator.Po  genericVca.Po  highLevelPacket.Po  interface.Po  irisEvent.Po  irisLink.Po  link.Po  lowLevelPacket.Po  mcFrontEnd.Po  networkComponent.Po  processor.Po  ptopSwaVcs.Po  ptop_swa.Po  pvtopv_swa.Po  router.Po  routerReqReply.Po  routerVcMP.Po  routerVcMPft.Po  (+18 more)
source/simIris/autom4te.cache/: output.0  requests  traces.0  traces.1
source/simIris/components/impl/: .genericPktGen.cc.swp  .routerVcMP.cc.swp  customPktGenVn.cc  customPktGenVn.h  genericBuffer.cc  genericBuffer.h  genericFlatMc.cc  genericFlatMc.h  genericInterfaceNB.cc  genericInterfaceNB.h  genericInterfaceNBVn.cc  genericInterfaceNBVn.h  genericInterfaceNBVs.cc  genericInterfaceNBVs.h  genericInterfaceNBb.cc  genericInterfaceNBb.h  genericInterfaceNBm.cc  genericInterfaceNBm.h  genericInterfaceNBpr.cc  genericInterfaceNBpr.h  genericInterfacePhy.cc  genericInterfacePhy.h  genericLink.cc  genericLink.h  genericPktGen.cc  genericPktGen.cc.orig  genericPktGen.cc~  genericPktGen.h  genericPktGen.h~  genericPktGenVn.cc  genericPktGenVn.h  genericRC.cc  genericRC.cc~  genericRC.h  genericRPG.cc  genericRouter4Stg.cc  genericRouter4Stg.h  genericRouterPhy.cc  genericRouterPhy.h  genericSink.cc  (+46 more)
source/simIris/components/interfaces/: .processor.h.swp  interface.h  networkComponent.cc  processor.h  processor.h~  router.h
source/simIris/data_types/impl/: flit.cc  flit.h  highLevelPacket.cc  highLevelPacket.h  lowLevelPacket.cc  lowLevelPacket.h
source/tests/: networkSink.cc  packetSource.cc  traceHandler.cc
source/util/: .config_constants.h.swp  .config_params.h.swp  config_constants.h  config_params.h  config_params.h~  genericData.cc  genericData.h  genericEvents.h  simIrisComponentHeader.h
